recursion.lessons.recursion.tree.Tree.scala.error
Tree:10: error: ')' expected but ';' found.
		tree(steps-1,shrink*length,droite(angle);
                                                        ^Tree:12: error: ')' expected but ';' found.
		tree(steps-1,shrink*length,gauche(angle);
                                                        ^