recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {

	if (steps==0) {
		avance(length);
		recule(length);
	}
	else {
		avance(length);
		tree(steps-1,shrink*length,droite(angle);
		recule(length);
		tree(steps-1,shrink*length,gauche(angle);
		recule(length);
	}

	
}
